--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,56 @@ test = [
   "pytest-cov>=4.1.0",
 ]
 
+[tool.pdm.scripts]
+analyze = {shell = "pylint --verbose pytest_synodic tests"}
+format = {shell = "black --check --verbose ."}
+lint = {composite = ["analyze", "format", "sort-imports", "type-check"]}
+sort-imports = {shell = "isort --check-only --diff --verbose ."}
+test = {shell = "pytest --cov=pytest_synodic --verbose tests"}
+type-check = {shell = "mypy ."}
+
+[tool.pytest.ini_options]
+log_cli = true
+testpaths = [
+  "tests",
+]
+
+[tool.black]
+line-length = 120
+preview = true
+
+[tool.isort]
+profile = "black"
+skip_gitignore = true
+
+[tool.mypy]
+exclude = "__pypackages__"
+plugins = ["pydantic.mypy"]
+strict = true
+
+[tool.pylint.MAIN]
+load-plugins = [
+  "pylint.extensions.code_style",
+  "pylint.extensions.typing",
+  "pylint.extensions.docstyle",
+  "pylint.extensions.docparams",
+  "pylint.extensions.private_import",
+  "pylint.extensions.bad_builtin",
+]
+
+[tool.pylint.format]
+max-line-length = "120"
+
+[tool.pylint.parameter_documentation]
+accept-no-param-doc = false
+accept-no-raise-doc = false
+accept-no-return-doc = false
+accept-no-yields-doc = false
+default-docstring-type = "google"
+
+[tool.coverage.report]
+skip_empty = true
+
 [build-system]
 build-backend = "pdm.backend"
 requires = ["pdm-backend"]
