--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 authors = [
   {name = "Asher Norland", email = "asher.norland@synodic.software"},
 ]
-dependencies = ["pytest>=7.4.0"]
+dependencies = [
+  "pytest>=7.4.0",
+  "synodic-utilities>=0.1.1.dev5",
+]
 description = "Synodic Pytest utilities"
 license = {text = "MIT"}
 name = "pytest-synodic"
